fix: fixed 2 scrollbars in about page

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .glass{
   /* background: rgba( 255, 255, 255, 1 ); */
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.40 );
@@ -29,6 +30,11 @@ background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
   background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
+.glass-bviolet{
+  background-color: #21D4FD;
+background-image: linear-gradient(66deg, #21D4FD 0%, #B721FF 84%);
+
+}
 .pattern-box{
   background-color: rgba(255, 255, 255, 0);
   opacity: 0.2;
